feat: 完善移动端适配readme

--- a/移动端适配.md
+++ b/移动端适配.md
@@ -1,25 +1,242 @@
 # 移动端适配
 
 ## 目的
-让拥有不同屏幕大小的终端设备拥有一致的UI界面，让拥有更大屏幕的终端设备展示更多内容。
+在不同尺寸的移动设备上，页面能相对达到合理的展示（响应式）或者保持统一效果的等比缩放（看起来差不多）。
 
-
-## 了解下viewport
+## 了解viewport
 viewport即视窗、窗口，用于显示网页内容的区域，在PC端，视窗就是浏览器窗口区域，而在移动端，为了让页面展示更多的内容，视窗的宽度默认不为设备的宽度，
 对于视窗而是有三个概念：布局视窗、视觉视窗、理想视窗。
 
-- 布局视窗 
+- 布局视窗 layout viewport
+  
+  布局视窗是网页布局的基本窗口。在PC上，布局视窗等于浏览器的窗口大小，而在移动端，布局视窗被赋予了一个默认值，这个值通常比该设备的逻辑分辨率大很多，
+  这样可以保证PC的网页内容可以呈现，但这样网页元素就会显得很小，用户可以用手指对网页进行缩放查看。
+
+![layout](https://raw.githubusercontent.com/tiger-mini/assets/main/img/layout.png)
+
+
 - 视觉视窗
+  
+   视觉视窗指的是用户通过屏幕实际看到的区域。视觉窗口等于当前浏览器的窗口的大小（包括滚动条宽度）。当用户进行缩放时，页面布局不会变，但缩放会改变
+   视觉窗口的大小。例如：用户将浏览器窗口放大了 200%，这时浏览器窗口中的 CSS像素会随着视觉窗口的放大而放大，这时一个 CSS像素会跨越更多的物理像素。
+   
+![visual](https://raw.githubusercontent.com/tiger-mini/assets/main/img/visual.png)
+
+
 - 理想视窗
+
+布局视口在移动端展示的效果并不是一个理想的效果，所以理想视口就诞生了：网站页面在移动端展示的理想大小。如下图，在浏览器调试移动端时页面上给
+定的像素大小就是理想视口大小，其实也就是逻辑分辨率的大小。
+
+![ideal](https://raw.githubusercontent.com/tiger-mini/assets/main/img/ideal.png)
+
+
+## 设置viewport
+
+借助 元素的 viewport 属性来帮助我们设置视口、缩放等，从而让移动端得到更好的展示效果。
+viewport 有以下字段可配置：
+
+| width      | 设置布局视口的宽度，为一个正整数，或字符串"width-device" |
+| ----------- | ----------- |
+| initial-scale | 设置页面的初始缩放值，为一个数字，可以带小数 |
+| minimum-scale | 允许用户的最小缩放值，为一个数字，可以带小数 |
+| maximum-scale | 允许用户的最大缩放值，为一个数字，可以带小数 |
+| height        | 设置布局视口的高度，这个属性对我们并不重要，很少使用 |
+| user-scalable | 是否允许用户进行缩放，值为"no"或"yes" |
+
+```
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+```
+
+解释
+-  width=device-width 表示将布局视口设置成为设备屏幕的宽度（逻辑分辨率宽度）；
+-  initial-scale=1 的意思是初始缩放的比例是 1，使用它的时候，同时也会将布局视口的尺寸设置为缩放后的尺寸；而缩放的尺寸就是基于屏幕的宽度来的，也就起到了和 width=device-width 同样的效果。另外，值得一提的是，我们在进行媒体查询的时候，查询的宽度值其实也是布局视口的宽度值。
+-  maximum-scale=1.0, minimum-scale=1.0, user-scalable=no 的目的是阻止用户缩放；（需要注意的是，在 ios10+以上，尽管开发者设置了 user-scalable=no，Safari 还是允许用户通过手势来缩放，安卓手机各大厂商的内置浏览器也逐渐开放用户缩放，即使使用 meta 标签进行设置）。
+
+
+
+## 适配方案
+
+#### 1、媒体查询 👎
+
+通过 CSS 的 @media 媒体查询设置不同的 style。
+
+如 link 中的媒体查询
+```
+<link rel="stylesheet" media="(max-width: 500px)" href="mobile.css" />
+<link rel="stylesheet" media="(min-width: 980px)" href="pc.css" />
+```
+
+如 css 中的媒体查询
+```
+@media only screen and (max-width: 414px){
+  html{
+    font-size: 64px;
+  }
+}
+@media only screen and (max-width: 375px){
+  html{
+    font-size: 58px;
+  }
+}
+@media only screen and (max-width: 360px){
+  html{
+    font-size: 56px;
+  }
+}
+@media only screen and (max-width: 320px){
+  html{
+    font-size: 50px;
+  }
+}
+```
+
+#### 2、动态 rem 方案（淘宝 flexible 方案） 👎
+
+对于不同屏幕，我们只需要动态修改根元素字体大小，元素大小就会同比例改变，从而做到页面的自动适配效果。
+
+[手淘团队的 flexible 方案](https://github.com/amfe/article/issues/17) 就是根据以上原理实现的，(点此查看DEMO)[http://huodong.m.taobao.com/act/yibo.html] 其
+核心代码如下：
+```javascript
+(function flexible (window, document) {
+  var docEl = document.documentElement
+  
+ 	// 根据屏幕宽度设置根元素字体大小，set 1rem = viewWidth / 10
+  function setRemUnit () {
+    var rem = docEl.clientWidth / 10
+    docEl.style.fontSize = rem + 'px'
+  }
+
+  setRemUnit()
+
+  // reset rem unit on page resize
+  window.addEventListener('resize', setRemUnit)
+  window.addEventListener('pageshow', function (e) {
+    if (e.persisted) {
+      setRemUnit()
+    }
+  })
+}(window, document))
+```
+
+根据上述方案，我们需要将设计稿中的 px 转化为 rem，如果每一次都需要自己计算 px 转换 rem，就太麻烦了。为了简化改过程，衍生出很多 px 转换 rem 的
+小工具。其中使用最为广泛的是 postcss-px2rem 。使用该用具，在实际开发中直接按照设计稿写 px 就可以了。
+
+
+如：
+最初的css代码
+```
+.selector {
+    width: 150px;
+    height: 64px; /*px*/
+    font-size: 28px; /*px*/
+    border: 1px solid #ddd; /*no*/
+}
+```
+使用插件转换之后
+```
+.selector {
+    width: 2rem;
+    border: 1px solid #ddd;
+}
+[data-dpr="1"] .selector {
+    height: 32px;
+    font-size: 14px;
+}
+[data-dpr="2"] .selector {
+    height: 64px;
+    font-size: 28px;
+}
+[data-dpr="3"] .selector {
+    height: 96px;
+    font-size: 42px;
+}
+```
+
+**文本字号不建议使用 rem**。在 iPhone3G 和 iPhone4 的 Retina 屏下面，希望看到的文本字号是相同的。也就是说，我们不希望文本在 Retina 
+屏幕下变小，另外，我们希望在大屏手机上看到更多文本，以及，现在绝大多数的字体文件都自带一些点阵尺寸，通常是 16px 和  24px，所以我们不希望出现 
+13px 和 15px 这样的奇葩尺寸。如此一来，就决定了在制作 H5 的页面中，rem 并不适合用到段落文本上。
+
+总结一下，使用动态 rem 方案需要做的工作：
+
+- meta 标签设置 viewport 宽度为屏幕宽度；
+- 根据不同屏幕修改根元素 font-size 大小，一般设置为屏幕宽度的十分之一（可引入 lib-flexible 库，或者自己写相应逻辑）；
+- 开发环境配置 postcss-px2rem 或者类似插件；
+- 根据设计稿写样式，元素宽高直接取设计稿宽高即可，单位为 px，插件会将其转换为 rem；
+- 段落文本也按照设计稿写，单位为px，不需要转换为 rem；
+
+
+PS：lib-flexible 这个过渡方案 [官方](https://github.com/amfe/lib-flexible#amfe-flexible) 已经放弃使用。下面是原话
+
+> 由于viewport单位得到众多浏览器的兼容，lib-flexible这个过渡方案已经可以放弃使用，不管是现在的版本还是以前的版本，都存有一定的问题。建议大家开始
+使用viewport来替代此方。
+
+#### 3、viewport 方案（推荐） 👍
+
+CSS Viewport units （视口单位）正是一种相对于屏幕宽高的一种长度单位，并且兼容性越来越好。
+视口单位有：vw、vh、vmin和vmax。
+vw 单位表示根元素宽度的百分比，1vw 等于视口宽度的1%。
+
+
+vw 适配方案需要做的工作：
+
+- meta 标签设置 viewport 宽度为屏幕宽度；
+- 开发环境配置 [postcss-px-to-viewport](https://www.npmjs.com/package/postcss-px-to-viewport) 或者类似插件；
+- 根据设计稿写样式，元素宽高直接取设计稿宽高即可，单位为 px，插件会将其转换为 vw；
+- 段落文本也按照设计稿写，单位为px，不需要转换为 vw；
+
+
+#### 4、固定 Viewport 宽度方案（整体缩放）👎
+
+所谓固定 viewport 宽度 ，即将网页布局视口的宽度设置为设计稿的宽度，不管是在哪种设备上，网页的布局视口宽度都是固定的。开发过程中，直接采用设计稿中
+的宽高设置元素大小、字体大小，单位采用 px 即可。
+
+例如，如果设计稿的宽度为 750px，那么我们就可以将布局视口设置如下：
+
+```
+<meta name="viewport" content="width=750, user-scalable=no" />
+```
+
+这种方案，其实相当于将页面整体缩放。其本质上是对页面进行线性缩放来适应不同大小的屏幕。这种方案对于一定尺寸范围内的设备是可以的。这种方案简单方便，
+但如果想开发出跨越平板和手机的界面则不太合适。因为手机和平板屏幕尺寸差异太大，会导致缩放太大、界面元素显得不太和谐。这种方案适用于一些简单的活动页，
+或者对页面适配要求不高的页面。
+
 
 
 
 ### 手写一个loader转行内样式loader
 
+如果选用第三种方案，使用postcss-px-to-viewport插件将样式中的px转为vw。则对于行内样式改插件是不支持转化的。有两种方式解决改问题：
 
-github [postcss-style-px-to-viewport](https://github.com/tiger-mini/postcss-style-px-to-viewport)
+1、开发约定不要写行内样式；
+
+2、增加对行内样式的处理能力；
+
+第一种方式显然不是万全之策。因此如何增加对行内样式的处理能力需求来到了面前。
+
+写一个基于webpack的构建loader，完成此功能。
+
+github 地址 [postcss-style-px-to-viewport](https://github.com/tiger-mini/postcss-style-px-to-viewport)
+
+> 该插件目前只支持对vue模板的处理。
+
+处理逻辑如下：
+
+1、在vue文件中匹配到template标签
+
+2、直接匹配数字与px的组合
+
+3、使用与postcss-px-to-viewport的同一方法处理 [createPxReplace](https://github.com/evrone/postcss-px-to-viewport/blob/master/index.js#L151)
 
 
+
+
+
+### 单位：rem 和 em
+
+- rem 即：‘The font size of the root element’，就是以根元素  的字体大小为基本单位，是一种相对单位。rem 适配的原理就是以 html 的 font-size 大小为基本单位来布局。
+- em 是另一种相对单位，它相对于该元素本身的 font-size 值来计算。
 
 
 ### 参考
